--- a/_config.yml
+++ b/_config.yml
@@ -104,11 +104,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Jinny"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "사물과 커뮤니케이션 하는 개발자입니다."
+  location         : "Ulsan, Korea"
+  email            : "young5619@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
