--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
+futrue: true
+
 # Site Settings
 locale                   : "en-US"
 title                    : "052-jinny 기술블로그"
